# TFG

./: .gitignore  .gitmodules  Makefile  README.md  uc3mthesisIEEE.cls
ada/: alire.toml  seizure_algorithm.gpr  sparklib.gpr  sum.adb  sum.ads
ada-bin-fixed/: alire.toml
ada-bin-fixed/src/: algorithms.ads  reals.ads
ada/src/: algorithms.adb  algorithms.ads  batchs.ads  cli.adb  detect.adb  detector.adb  detector.ads  fftw-double-formal.ads  fftw-double.ads  fftw-implement.adb  fftw-implement.ads  fftw-single.ads  fftw.ads  fold_n.adb  fold_n.ads  generic_algorithms.adb  generic_algorithms.ads  generic_batchs.ads  generic_detector.adb  generic_detector.ads  generic_input_file.adb  generic_loader.adb  generic_loader.ads  generic_real_accumulation.adb  generic_real_accumulation.ads  generic_real_sum.adb  generic_real_sum.ads  generic_signals-holders.adb  generic_signals-holders.ads  generic_signals.adb  generic_signals.ads  generic_sum.adb  generic_sum.ads  generic_welch.adb  generic_welch.ads  loader.adb  loader.ads  seizure-detector.adb  seizure-detector.ads  seizure.adb  (+5 more)
ada/src.old/: seizure-detector.ads  seizure-signals.adb  seizure-signals.ads  seizure.ads  seizure_algorithm.adb
ada/src/unsafe/: cli.ads  generic_input_file.ads
c++/: CMakeLists.txt
c++/src/: CMakeLists.txt  dtw.hpp  metadata.hpp  welch.hpp
c++/src/openmp/: parallel.hpp
c++/src/sequential/: parallel.hpp
c++/src/tbb/: parallel.hpp
c++/tests/: .gitignore  benchmark-signals_.hpp  eeglib-benchmarks.py  eeglib_tests.py  energy-benchmark.cpp  real-data-test-old.cpp  repr.py  run-benchmarks.cpp  signals-tests.py  test-validation.cpp
code/ada/: alire.toml  seizure_detector.gpr
code/ada-old/common/: alire.toml
code/ada-old/fixed-10/: alire.toml
code/ada-old/fixed-2/: alire.toml  bin_fixed_seizure_detector.gpr
code/ada/src/: detector.ads  (+6 more)
code/c++/: .gitignore
common/: .gitignore  process.py  requirements.txt
docs/: .gitignore  Makefile  report.tex
docs/parts/: implementation.tex
docs/report/: 2-estado-del-arte.typ  3-análisis.typ  5-implementación-y-despliegue.typ  6-validación-verificación-y-evaluación.typ  7-planificación-y-análisis-de-costes.typ  8-marco-regulatorio.typ  referencias.bib  report.typ  utility.typ
report/: .gitignore  1-introducción.typ  2-estado-del-arte.typ  3-análisis.typ  4-diseño-e-implementación.typ  4-diseño.typ  5-implementación-y-despliegue.typ  5-validación-verificación-y-evaluación.typ  6-marco-regulador.typ  6-validación-verificación-y-evaluación.typ  7-entorno-socio-económico-y-ods.typ  8-marco-regulatorio.typ  8-planificación.typ  9-conclusiones-y-trabajo-futuro.typ  Makefile  ORGANIZACION.md  dedicatoria.typ  glosario.typ  prepare.sh  referencias.bib  report.typ  requisitos.old  requisitos.typ  resumen.typ  traspas.typ  utility.typ
report/layout/: README.md  arguments.typ  generative-ai.typ  lib.typ  locale.typ  titlepage.typ  typst.toml  utils.typ
report/srs/: items.typ  show.typ
report/uml/: arquitectura.uml  casos-de-uso.uml  gantt.uml
scheme/: signals.scm
src/: BUGS  README.md  compare.awk
src/ada/: alire.toml  alire.toml.in  assert.adc  config.sh  detector.gpr  detector_common.gpr  release.adc  seizure_detector.gpr
src/ada-detector/: .gitignore  TODO  alire.toml  compare.awk  detector.gpr  detector_common.gpr  gnat.adc  old.adb  seizure_detector_fixed.gpr  sparklib.gpr  sparklib_external.gpr
src/ada-embed-utils/: alire.toml
src/ada-fixed/: .gitignore  TODO  alire.toml  compare.awk  detector.gpr  detector_common.gpr  gnat.adc  prove.sh  seizure_detector_fixed.gpr  sparklib_external.gpr  test_fft.adb
src/ada-float/: alire.toml  config.sh  seizure_detector_float.gpr
src/ada-old/: gnat.adc
src/ada/esp32/: CMakeLists.txt  sdkconfig
src/ada/esp32/main/: main.c
src/ada/fixed/esp32/: .gitignore  CMakeLists.txt  alire.toml  benchmarks  flash.sh  sdkconfig  sdkconfig.esp32c3  seizure_detector_fixed_esp32.gpr
src/ada/fixed/esp32/main/: main.c
src/ada/fixed/esp32/src/: detector_c_binding.adb  safe_time.adb
src/c++/: .gitignore  CMakeLists.txt  README.md  compile.sh  conanfile.txt  prepare.sh
src/c++-float/: README.md  conanfile.py  main.py  pyproject.toml
src/c++/esp32/main/: main.cpp  seizure  serial.hpp  validator.hpp
src/c++/fixed/main/: CMakeLists.txt
src/c++/fixed/src/: algorithms.hpp
src/c++/float/: prepare.sh
src/c++/float/esp32/: sdkconfig  sdkconfig.old
src/c++/float/esp32/main/: CMakeLists.txt  dtw.hpp  fftw++.hpp  types.hpp
src/c++/float/modules/: CMakeLists.txt  signals.cpp
src/c++/float/profiles/: clang-rel  gcc-rel  rpi32
src/c++/float/src/: dtw.hpp  fftw++.hpp  serial.hpp  signals.hpp
src/c++/float/tests/: seizure_detector_benchmark.cpp  seizure_detector_utests.cpp
src/c++/main/: common.hpp  seizure_detector.cpp  seizure_detector_config.hpp  seizure_detector_ftests.cpp  seizure_detector_simulation.cpp
src/c++/modules/: pyutils.hpp
src/c++/profiles/: clang-rel  raspberrypi  tidy
src/c++/src/: batch.hpp  fftw++.hpp  views.hpp  welch.hpp
src/c++/src/thread/: parallel.hpp
src/c++/tests/: CMakeLists.txt  benchmark-validation_.hpp  benchmarks.cpp  benchmarks.py  check_validation_parameters.py  common.hpp  generate.py  real-data-test.cpp  real-data-test.py  real_data_test_helper.py  seizure_detector.cpp  seizure_detector_benchmark.cpp  seizure_detector_config.hpp  seizure_detector_ftests.cpp  statistics.py  toolbox.py  validation.py
src/cross/: Dockerfile
src/forth/: algorithms.fth  input.fth  seizure_detector.fth  signal.fth
src/main/: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml  utils.cmake
src/main/include/: detector.h
src/main/src/: application.c  benchmark.c  detector.h
src/main/template/ada/: CMakeLists.txt  alire.toml  build.sh  detector.gpr  run.sh  sdkconfig
src/python3/: .gitignore  detector.py  potatoes.txt  pyproject.toml
src/python3/seizure_detector/: batch.py  metadata.py
src/scheme/: signals.scm
tests/: .gitignore  ftests.py  launch_ftests.sh  minmax.awk  minmax.sh  mylib.py  prepare.py  pyproject.toml  requirements.txt  utests.py
(+467 files in other folders)
