[project]
name = "tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "conan>=2.12.2",
    "cython==0.29.35",
    "dlib==19.24.2",
    "dtw-python==1.3.0",
    "mne==1.2.2",
    "numpy==1.26.4",
    "pandas==2.0.3",
    "pyriemann==0.4",
    "scikit-learn==1.5.0",
    "scikit-learn-extra==0.3.0",
    "scipy==1.11.3",
    "setuptools>=75.8.0",
    "tables==3.7.0",
    "wfdb>=4.1.2",
]
