[project]
name = "python3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "dtw-python~=1.3.0",
    "mne~=1.2.2",
    "numpy~=1.26.4",
    "pandas~=2.0.3",
    "pyriemann~=0.4",
    "setuptools>=80.4.0",
    "tables~=3.7.0",
]
